--- a/app/src/main/res/layout/movie_item_layout.xml
+++ b/app/src/main/res/layout/movie_item_layout.xml
@@ -1,46 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    android:orientation="horizontal"
+    android:weightSum="1"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <com.theophrast.ui.widget.SquareImageView
+        android:id="@+id/movie_poster"
+        android:layout_width="180dp"
+        android:layout_height="310dp"
+        android:layout_weight="0.25"
+        android:scaleType="fitCenter"
+        android:src="@drawable/eee"
+        app:hwRatio="1.4866" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:weightSum="1"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:layout_weight="0.75"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-        <com.theophrast.ui.widget.SquareImageView
-            android:id="@+id/movie_poster"
-            android:layout_width="180dp"
-            android:layout_height="310dp"
-            android:layout_weight="0.25"
-            android:scaleType="fitCenter"
-            android:src="@drawable/eee"
-            app:hwRatio="1.4866" />
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/movie_name"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.75"
-            android:padding="8dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:text="Title" />
 
-            <TextView
-                android:id="@+id/movie_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Title" />
-
-            <TextView
-                android:id="@+id/movie_plot"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Movie Plot" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/movie_plot"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Movie Plot" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
