--- a/app/src/main/res/layout/movie_item_layout.xml
+++ b/app/src/main/res/layout/movie_item_layout.xml
@@ -15,8 +15,8 @@
 
     <com.theophrast.ui.widget.SquareImageView
         android:id="@+id/movie_poster"
-        android:layout_width="180dp"
-        android:layout_height="310dp"
+        android:layout_width="152dp"
+        android:layout_height="219dp"
         android:layout_weight="0.25"
         android:scaleType="fitCenter"
         android:src="@drawable/eee"
@@ -33,12 +33,45 @@
             android:id="@+id/movie_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title" />
+            android:fontFamily="@font/opensans_reg"
+            android:text="Title"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/movie_plot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Movie Plot" />
+            android:fontFamily="@font/monts_reg"
+            android:text="Movie Plot"
+            android:textSize="14sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="2dp"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <Button
+                android:id="@+id/button_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:textColor="@color/white"
+                android:layout_marginEnd="2dp"
+                android:backgroundTint="@color/green"
+                android:text="View" />
+
+            <Button
+                android:id="@+id/button_add_fav"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:textColor="@color/white"
+                android:layout_marginStart="2dp"
+                android:backgroundTint="@color/red"
+                android:text="Add Fav" />
+
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
