--- a/app/src/main/res/layout/movie_item_layout.xml
+++ b/app/src/main/res/layout/movie_item_layout.xml
@@ -35,6 +35,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_reg"
             android:text="Title"
+            android:textColor="@color/colorWhite"
             android:textSize="20sp" />
 
         <TextView
@@ -43,34 +44,35 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/monts_reg"
             android:text="Movie Plot"
+            android:textColor="@color/colorLight"
             android:textSize="14sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="2dp"
             android:orientation="horizontal"
+            android:padding="2dp"
             android:weightSum="1">
 
             <Button
                 android:id="@+id/button_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:textColor="@color/white"
                 android:layout_marginEnd="2dp"
+                android:layout_weight="0.5"
                 android:backgroundTint="@color/green"
-                android:text="View" />
+                android:text="View"
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/button_add_fav"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:textColor="@color/white"
                 android:layout_marginStart="2dp"
+                android:layout_weight="0.5"
                 android:backgroundTint="@color/red"
-                android:text="Add Fav" />
+                android:text="Add Fav"
+                android:textColor="@color/white" />
 
         </LinearLayout>
     </LinearLayout>
