--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorDark"
+            android:background="@color/colorBlack"
             android:fontFamily="@font/opensans_reg"
             android:padding="12dp"
             android:paddingTop="4dp"
@@ -105,7 +105,7 @@
             android:id="@+id/dashboard_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorDark"
+            android:background="@color/colorBlack"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
     </LinearLayout>
