--- a/app/src/main/res/menu/dashboard_list_menu.xml
+++ b/app/src/main/res/menu/dashboard_list_menu.xml
@@ -5,5 +5,5 @@
         android:title="View" />
     <item
         android:id="@+id/dashboard_share"
-        android:title="Share" />
+        android:title="Share on Whatsapp" />
 </menu>
