--- a/app/src/main/res/layout/movie_item_layout.xml
+++ b/app/src/main/res/layout/movie_item_layout.xml
@@ -65,6 +65,7 @@
                 android:textColor="@color/white" />
 
             <Button
+                android:visibility="gone"
                 android:id="@+id/button_add_fav"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
