--- a/app/src/main/res/layout/dashboard_layout.xml
+++ b/app/src/main/res/layout/dashboard_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="1dp"
     android:background="@color/colorDark"
     android:orientation="vertical">
@@ -20,7 +21,7 @@
             android:id="@+id/dashboard_movie_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_marginLeft="8dp"
             android:layout_weight="0.95"
             android:fontFamily="@font/opensans_reg"
             android:text="Title"
@@ -31,10 +32,11 @@
             android:id="@+id/dashboard_more_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="2dp"
+            android:layout_marginRight="4dp"
             android:layout_weight="0.025"
-            android:backgroundTint="@color/colorWarning"
             android:text="More"
+            app:rippleColor="@color/colorLight"
+            style="?attr/materialButtonOutlinedStyle"
             android:textColor="@color/colorLight" />
 
         <Button
