--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,61 +7,90 @@
     android:background="@color/colorBlack"
     tools:context=".DetailActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.75"
-        android:orientation="vertical"
-        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.theophrast.ui.widget.SquareImageView
-            android:id="@+id/detail_movie_poster"
-            android:layout_width="203dp"
-            android:layout_height="304dp"
-            android:layout_gravity="center"
-            android:layout_weight="0.25"
-            android:scaleType="fitCenter"
-            android:src="@drawable/eee"
-            app:hwRatio="1.4866" />
-
-        <TextView
-            android:id="@+id/detail_movie_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:fontFamily="@font/monts_reg"
-            android:padding="8dp"
-            android:text="Title"
-            android:textColor="@color/colorWhite"
-            android:textSize="25dp" />
-
-        <TextView
-            android:id="@+id/detail_movie_plot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_reg"
-            android:padding="2dp"
-            android:text="Movie Plot"
-            android:textColor="@color/colorLight"
-            android:textSize="18sp" />
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/detail_chip_group"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <LinearLayout
-            android:id="@+id/detail_movie_share"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_weight="0.75"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
+            <com.theophrast.ui.widget.SquareImageView
+                android:id="@+id/detail_movie_poster"
+                android:layout_width="264dp"
+                android:layout_height="374dp"
+                android:layout_gravity="center"
+                android:layout_weight="0.25"
+                android:src="@drawable/eee"
+                app:hwRatio="1.4866" />
+
+            <TextView
+                android:id="@+id/detail_movie_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/monts_reg"
+                android:paddingHorizontal="16dp"
+                android:text="Title"
+                android:textColor="@color/colorWhite"
+                android:textSize="25dp" />
+
+            <TextView
+                android:id="@+id/detail_movie_plot"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/opensans_reg"
+                android:paddingHorizontal="16dp"
+                android:text="Movie Plot"
+                android:textColor="@color/colorLight"
+                android:textSize="18sp" />
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/detail_chip_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:paddingHorizontal="16dp" />
+
+            <LinearLayout
+                android:id="@+id/detail_movie_buttons"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                android:paddingHorizontal="16dp"
+                android:weightSum="1">
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="4dp"
+                    android:layout_weight="0.5"
+                    android:backgroundTint="@color/colorDanger"
+                    android:text="Remove"
+                    android:textColor="@color/colorWhite" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="4dp"
+                    android:layout_weight="0.5"
+                    android:backgroundTint="@color/colorSecondary"
+                    android:text="Share"
+                    android:textColor="@color/colorWhite" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
